<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/editTextPhone"
        android:layout_width="408dp"
        android:layout_height="88dp"
        android:background="#226324"
        android:freezesText="true"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <se.miun.taja1900.dt031g.dailer.DialpadButton
        android:id="@+id/dialpad_button_1"
        android:layout_width="140dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154"
        app:title="@string/title_dialpad_1" >

    </se.miun.taja1900.dt031g.dailer.DialpadButton>

    <se.miun.taja1900.dt031g.dailer.DialpadButton
        android:id="@+id/dialpad_button_2"
        android:layout_width="140dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154"
        app:message="@string/message_dialpad_2"
        app:title="@string/title_dialpad_2"
        />



    <se.miun.taja1900.dt031g.dailer.DialpadButton
        android:id="@+id/dialpad_button_3"
        android:layout_width="140dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154"
        app:message="@string/message_dialpad_3"
        app:title="@string/title_dialpad_3"
        />

    <se.miun.taja1900.dt031g.dailer.DialpadButton
        android:id="@+id/dialpad_button_4"
        android:layout_width="140dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427"
        app:message="@string/message_dialpad_4"
        app:title="@string/title_dialpad_4"
        />

    <se.miun.taja1900.dt031g.dailer.DialpadButton
        android:id="@+id/dialpad_button_5"
        android:layout_width="140dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427"
        app:message="@string/message_dialpad_5"
        app:title="@string/title_dialpad_5"
        />

    <se.miun.taja1900.dt031g.dailer.DialpadButton
        android:id="@+id/dialpad_button_6"
        android:layout_width="140dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427"
        app:message="@string/message_dialpad_6"
        app:title="@string/title_dialpad_6"
        />

    <se.miun.taja1900.dt031g.dailer.DialpadButton
        android:id="@+id/dialpad_button_7"
        android:layout_width="140dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.715"
        app:message="@string/message_dialpad_7"
        app:title="@string/title_dialpad_7"
        />

    <se.miun.taja1900.dt031g.dailer.DialpadButton
        android:id="@+id/dialpad_button_8"
        android:layout_width="140dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.715"
        app:message="@string/message_dialpad_8"
        app:title="@string/title_dialpad_8"
        />

    <se.miun.taja1900.dt031g.dailer.DialpadButton
        android:id="@+id/dialpad_button_9"
        android:layout_width="140dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.715"
        app:message="@string/message_dialpad_9"
        app:title="@string/title_dialpad_9"
        />

    <se.miun.taja1900.dt031g.dailer.DialpadButton
        android:id="@+id/dialpad_button_0"
        android:layout_width="140dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:message="@string/message_dialpad_0"
        app:title="@string/title_dialpad_0"
        />

    <se.miun.taja1900.dt031g.dailer.DialpadButton
        android:id="@+id/dialpad_button_pound"
        android:layout_width="130dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:title="@string/title_dialpad_pound" >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="24dp"
            android:layout_height="40dp"
            tools:layout_editor_absoluteX="105dp"
            tools:layout_editor_absoluteY="82dp"
            android:contentDescription="@string/todo" />
    </se.miun.taja1900.dt031g.dailer.DialpadButton>


    <ImageButton
        android:id="@+id/del_button"
        style="@android:style/Widget.Holo.ImageButton"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:adjustViewBounds="true"
        android:background="#226324"
        android:clickable="true"
        android:contentDescription="@string/imageButton_del"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_input_delete"
        tools:ignore="RedundantDescriptionCheck" />

    <se.miun.taja1900.dt031g.dailer.DialpadButton
        android:id="@+id/dialpad_button_star"
        android:layout_width="140dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextPhone"
        app:layout_constraintVertical_bias="0.993"
        app:title="@string/title_dialpad_star" />

</androidx.constraintlayout.widget.ConstraintLayout>